# rad

./: LICENSE  README.md  pyproject.toml
src/rad/: __init__.py
src/rad/schemas/: __init__.py
test/: test_imports.py
